解答を見ながら修正
不要なものや違う記述を解答を見ながら修正した

--- a/app/views/prototypes/_form.html.erb
+++ b/app/views/prototypes/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with model: @prototype, local: true do |f|%>
+<%# 解答よりmodel: @prototype => prototypeへ %>
+<%= form_with model: prototype, local: true do |f|%>
   <div class="field">
     <%= f.label :title, "プロトタイプの名称" %><br />
     <%= f.text_field :title %>
