--- a/app/views/prototypes/edit.html.erb
+++ b/app/views/prototypes/edit.html.erb
@@ -3,7 +3,8 @@
     <div class="form__wrapper">
       <h2 class="page-heading">プロトタイプ編集</h2>
       <%# 部分テンプレートでフォームを表示する %>
-      <%= render partial: "form"%>
+      <%# 解答より　locals ~~の記述を追加 %>
+      <%= render partial: "form" locals: { prototype: @prototype } %>
     </div>
   </div>
 </div>
