--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -4,12 +4,12 @@
       <p class="prototype__hedding">
         <%= @prototype.title %>
       </p>
-      <%= link_to "by #{@prototype.user.name} ", user_path, class: :prototype__user %>
+      <%= link_to "by #{@prototype.user.name} ", user_path(@prototype.user), class: :prototype__user %>
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
       <% if user_signed_in? && current_user.id == @prototype.user_id %>
         <div class="prototype__manage">
-          <%= link_to "編集する", edit_prototype_path, method: :get, class: :prototype__btn %>
-          <%= link_to "削除する", prototype_path, method: :delete, class: :prototype__btn %>
+          <%= link_to "編集する", edit_prototype_path(@prototype), class: :prototype__btn %>
+          <%= link_to "削除する", prototype_path(@prototype), method: :delete, class: :prototype__btn %>
         </div>
         <% end %>
       <%# // プロトタイプの投稿者とログインしているユーザーが同じであれば上記を表示する %>
@@ -48,10 +48,9 @@
           <%# 投稿に紐づくコメントを一覧する処理を記述する %>
             <li class="comments_list">
               <% @comments.each do |comment| %>
-              <p>
+              <li class="comments_list">
               <%= comment.text %>
-              <%= link_to  "#{comment.user.name}", user_path, class: :comment_user %>
-              </p>
+              <%= link_to  "#{comment.user.name}", user_path(comment.user), class: :comment_user %>
                <% end %>
             </li>
           <%# // 投稿に紐づくコメントを一覧する処理を記述する %>
